<resources>
    <string name="app_name">PersistentStorage</string>
    <string name="buat_file">Buat File</string>
    <string name="ubah_file">Ubah File</string>
    <string name="baca_file">Baca File</string>
    <string name="hapus_file">Hapus File</string>
    <string name="hasil_baca_file">Hasil Baca File</string>
    <string name="file_not_found">file not found</string>
    <string name="main_activity_sub_title">Android Persistence Data Storage</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">External Storage</string>
</resources>