<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_sub_title"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:onClick="goToInternalActivity"
        android:id="@+id/btn_internalStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/internal_storage" />

    <Button
        android:onClick="goToExternalActivity"
        android:id="@+id/btn_externalStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/external_storage" />

</LinearLayout>